[tool.poetry.dependencies]

python = "3.9"
sphinx = "*"
pandas = "*"
ca-certificates = "*"
certifi = "*"
openssl = "*"
pyarrow = "*"
beautifulsoup4 = "*"
css-html-js-minify = "*"
lxml = "*"
python-dotenv = "*"
python-slugify = "*"
pyyaml = "*"
soupsieve = "*"
sphinx-collapse = "*"
sphinxawesome-theme = "*"
tabulate = "*"
text-unidecode = "*"
unidecode = "*"
